infra/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: sanbao
  labels:
    app.kubernetes.io/name: sanbao
